--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Sunshine Indonesia</string>
+    <string name="weather_day_title">Sunday</string>
+    <string name="weather_desc">Hujan Rintik Rintik</string>
 </resources>
